added projects as an object and made basic layout and about me

--- a/index.html
+++ b/index.html
@@ -27,10 +27,64 @@
         </div>
     </div>
     <!-- about -->
+    <div class="card text-white bg-primary about-me">
+        <img class="card-img-top" src="" alt="">
+        <div class="card-body">
+            <h4 class="card-title">About Me</h4>
+            <p class="card-text">
+                10+ years in software development. My first taste in programming was in elementary school when I picked up and Algebra book
+                and it had some small BASIC code snippets. I plugged them into my computer and they worked! I continuously filled my curiousity and learned more and more about computers and software. 
+                I was soon considered the computer expert on our block.
+            </p>
+            <p class="card-text">
+                That title followed me into college where I received my Bachelor of Science in Mathematics with minors in Computer Science
+                and English. In my senior year, our team won an award for our educational math game written in flash.
+            </p>
+            <p class="card-text">
+                After graduating, I turned down a few technical support positions because I knew I wanted to write code. Luckily, I was soon hired
+                at UniFocus working on paper and online surveys. For the paper surveys, I used OCR technogly and C++ to import
+                the data and SQL Server to query the results. For the online surveys, I used HTML, CSS, and a touch of JS
+                to generate the surveys. Throughout my time at UniFocus, I worked on various other projects including testing
+                .Net projects, building dashboards with Flex, and eventually leading our small Business Intelligence team which used a combination of technologies such as SQL Server, Cognos, and BIRT.
+            </p>
+            <p class="card-text">
+                After 8 years at UniFocus, I moved onto a new position at Petmate as an Applications Developer. At Petmate, I have worked
+                on a large number of projects including Oracle reports, eCommerce, and various one-off projects. Some of
+                the one-off projects are sweepstakes pages, a store locator service, and a service to retrieve profiles.
+            </p>
+            <p class="card-text">
+                I am currently attending an intensive 6 month boot camp dedicated to designing and building full-stack web applications at
+                SMU. Skills learned consist of HTML5, CSS3, JavaScript, jQuery, Bootstrap, Firebase, Node Js, MySQL, MongoDB,
+                Express, Nightmare.JS, and React Js.
+            </p>
+        </div>
+    </div>
 
-    <!-- timeline -->
+    <img src="" class="img-fluid|thumbnail rounded-top|rounded-right|rounded-bottom|rounded-left|rounded-circle|" alt="">
+
+<div class="card">
+    <!-- <img class="card-img-top" data-src="holder.js/100x180/?text=Image cap" alt="Card image cap"> -->
+    <div class="card-body">
+        <h4 class="card-title">Portfolio</h4>
+        <p class="card-text">Bootcamp Projects</p>
+    </div>
+    <div class="card-body" id="projects">
+        <a href="#" class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a>
+    </div>
+</div>
+<a href="#" class="badge badge-primary|secondary|success|danger|warning|info|light|dark"></a>
+
+    <!-- timeline TODO-->
+    <!-- experience TODO-->
     <!-- portfolio -->
-    <!-- experience -->
+    <div class="card" id="portfolio" style="background-color:cadetblue; border-color:darkblue;">
+      <div class="card-body">
+        <h4 class="card-title">Portfolio</h4>
+        <p class="card-text">Current Bootcamp Projects</p>
+      </div>
+    </div>
+
 
     <!-- connect -->
     <div class="card">
@@ -53,7 +107,8 @@
 
     <!-- footer -->
     <footer>
-        © Copyright <span id="current-year">2018</span> Damian Ramirez
+        © Copyright
+        <span id="current-year">2018</span> Damian Ramirez
     </footer>
 
     <!-- Optional JavaScript -->
@@ -65,6 +120,7 @@
         crossorigin="anonymous"></script>
     <!-- Local JS -->
     <script src="assets/js/app.js"></script>
+    <script src="assets/js/projects.js"></script>
 </body>
 
 </html>
