--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
+        <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
@@ -32,20 +33,22 @@
         <div class="card-body">
             <h4 class="card-title">About Me</h4>
             <p class="card-text">
-                10+ years in software development. My first taste in programming was in elementary school when I picked up and Algebra book
-                and it had some small BASIC code snippets. I plugged them into my computer and they worked! I continuously filled my curiousity and learned more and more about computers and software. 
-                I was soon considered the computer expert on our block.
+                10+ years in software development. My first taste in programming was over 20 years ago in elementary school when I picked up an Algebra book
+                and it contained some small BASIC code snippets. I plugged them into my computer and they worked! I continuously
+                filled my curiousity and learned more and more about computers and software. I was soon considered the computer
+                expert on our block.
             </p>
             <p class="card-text">
                 That title followed me into college where I received my Bachelor of Science in Mathematics with minors in Computer Science
                 and English. In my senior year, our team won an award for our educational math game written in flash.
             </p>
             <p class="card-text">
-                After graduating, I turned down a few technical support positions because I knew I wanted to write code. Luckily, I was soon hired
-                at UniFocus working on paper and online surveys. For the paper surveys, I used OCR technogly and C++ to import
-                the data and SQL Server to query the results. For the online surveys, I used HTML, CSS, and a touch of JS
-                to generate the surveys. Throughout my time at UniFocus, I worked on various other projects including testing
-                .Net projects, building dashboards with Flex, and eventually leading our small Business Intelligence team which used a combination of technologies such as SQL Server, Cognos, and BIRT.
+                After graduating, I turned down a few technical support positions because I knew I wanted to write code. Luckily, I was soon
+                hired at UniFocus working on paper and online surveys. For the paper surveys, I used OCR technogly and C++
+                to import the data and SQL Server to query the results. For the online surveys, I used HTML, CSS, and a touch
+                of JS to generate the surveys. Throughout my time at UniFocus, I worked on various other projects including
+                testing .Net projects, building dashboards with Flex, and eventually leading our small Business Intelligence
+                team which used a combination of technologies such as SQL Server, Cognos, and BIRT.
             </p>
             <p class="card-text">
                 After 8 years at UniFocus, I moved onto a new position at Petmate as an Applications Developer. At Petmate, I have worked
@@ -60,55 +63,42 @@
         </div>
     </div>
 
-    <img src="" class="img-fluid|thumbnail rounded-top|rounded-right|rounded-bottom|rounded-left|rounded-circle|" alt="">
-
-<div class="card">
-    <!-- <img class="card-img-top" data-src="holder.js/100x180/?text=Image cap" alt="Card image cap"> -->
-    <div class="card-body">
-        <h4 class="card-title">Portfolio</h4>
-        <p class="card-text">Bootcamp Projects</p>
-    </div>
-    <div class="card-body" id="projects">
-        <a href="#" class="card-link">Card link</a>
-        <a href="#" class="card-link">Another link</a>
-    </div>
-</div>
-<a href="#" class="badge badge-primary|secondary|success|danger|warning|info|light|dark"></a>
-
-    <!-- timeline TODO-->
-    <!-- experience TODO-->
     <!-- portfolio -->
-    <div class="card" id="portfolio" style="background-color:cadetblue; border-color:darkblue;">
-      <div class="card-body">
-        <h4 class="card-title">Portfolio</h4>
-        <p class="card-text">Current Bootcamp Projects</p>
-      </div>
-    </div>
-
-
-    <!-- connect -->
-    <div class="card">
-        <div class="card-body">
-            <h4 class="card-title">Connect with Me</h4>
-            <hr>
+    <!-- begin carousel -->
+    <div id="carouselId" class="carousel slide" data-ride="carousel">
+        <h4 class="card-title">Bootcamp Projects</h4>
+        <ol class="carousel-indicators">
+            <li data-target="#carouselId" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselId" data-slide-to="1"></li>
+            <li data-target="#carouselId" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
         </div>
-        <div class="card-body">
-            <a href="https://github.com/stmu009" class="card-link">
-                <img alt="github" class="social-icons" src="assets/images/github.png">
-            </a>
-            <a href="https://www.linkedin.com/in/damianlinkedin/" class="card-link">
-                <img alt="linkedin" class="social-icons" src="assets/images/linkedin.png">
-            </a>
-            <a href="https://stackexchange.com/users/2807365/damian-ramirez" class="card-link">
-                <img alt="stackoverflow" class="social-icons" src="assets/images/stackoverflow.png">
-            </a>
-        </div>
+        <a class="carousel-control-prev" href="#carouselId" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselId" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
+    <!-- end carousel -->
 
     <!-- footer -->
     <footer>
         © Copyright
         <span id="current-year">2018</span> Damian Ramirez
+        <br>
+        <a href="https://github.com/stmu009" class="card-link">
+            <img alt="github" class="social-icons" src="assets/images/github.png">
+        </a>
+        <a href="https://www.linkedin.com/in/damianlinkedin/" class="card-link">
+            <img alt="linkedin" class="social-icons" src="assets/images/linkedin.png">
+        </a>
+        <a href="https://stackexchange.com/users/2807365/damian-ramirez" class="card-link">
+            <img alt="stackoverflow" class="social-icons" src="assets/images/stackoverflow.png">
+        </a>
     </footer>
 
     <!-- Optional JavaScript -->
